Update to PreTeXt project source.

--- a/julia-output/basics/functional-programming.ipynb
+++ b/julia-output/basics/functional-programming.ipynb
@@ -394,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12.0-beta4",
+   "display_name": "Julia 1.12.0-rc1",
    "language": "julia",
    "name": "julia-1.12"
   },
@@ -402,7 +402,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.12.0-beta4"
+   "version": "1.12.0-rc1"
   }
  },
  "nbformat": 4,
